RESOLVED FIXED108534
[Qt][WK2] Fix build after removal of MessageID.h
https://bugs.webkit.org/show_bug.cgi?id=108534
Summary [Qt][WK2] Fix build after removal of MessageID.h
Rafael Brandao
Reported 2013-01-31 14:49:17 PST
[Qt][WK2] Fix build after removal of MessageID.h
Attachments
Patch (6.86 KB, patch)
2013-01-31 14:50 PST, Rafael Brandao
no flags
Rafael Brandao
Comment 1 2013-01-31 14:50:26 PST
Rafael Brandao
Comment 2 2013-01-31 14:51:27 PST
Anders, could you take a look? I believe this also might help other ports like EFL and Gtk.
Rafael Brandao
Comment 3 2013-01-31 15:27:34 PST
Comment on attachment 185872 [details] Patch Clearing flags on attachment: 185872 Committed r141495: <http://trac.webkit.org/changeset/141495>
Rafael Brandao
Comment 4 2013-01-31 15:27:44 PST
All reviewed patches have been landed. Closing bug.
Viatcheslav Ostapenko
Comment 5 2013-01-31 17:22:22 PST
*** Bug 108532 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.