Source/WebKit2/Target.pri
@@ -26,7 +26,6 @@ HEADERS += \
     Platform/CoreIPC/HandleMessage.h \
     Platform/CoreIPC/MessageDecoder.h \
     Platform/CoreIPC/MessageEncoder.h \
-    Platform/CoreIPC/MessageID.h \
     Platform/CoreIPC/MessageReceiver.h \
     Platform/CoreIPC/MessageReceiverMap.h \
     Platform/CoreIPC/MessageSender.h \
